syntax = "proto3";

package calculator;

option go_package = "github.com/Amartya-Bhardwaj/grpc/calculator/proto";


message SumRequest{
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse{
    int32 result = 1;
}

message PrimeRequest{
    int64 number = 1;
}

message PrimeResponse{
    int64 result = 1;
}

service SumService{
    rpc Sum(SumRequest) returns (SumResponse);
    rpc Primes (PrimeRequest) returns (stream PrimeResponse);
}